@@ -49,7 +49,8 @@ installcheck_programs = \
 	ags_check_system_functional_drum_test \
 	ags_check_system_functional_matrix_test \
 	ags_check_system_functional_synth_test \
-	ags_check_system_functional_hybrid_synth_test
+	ags_check_system_functional_hybrid_synth_test \
+	ags_check_system_functional_ffplayer_test
 
 noinst_PROGRAMS += $(installcheck_programs)
 
@@ -185,6 +186,13 @@ ags_check_system_functional_hybrid_synth_test_CPPFLAGS = -DAGS_SRC_DIR=\"$(srcdi
 ags_check_system_functional_hybrid_synth_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_functional_hybrid_synth_test_LDADD = $(gsequencer_check_system_functional_test_LDADD)
 
+# functional ffplayer test
+ags_check_system_functional_ffplayer_test_SOURCES = ags/test/app/machine/ags_functional_ffplayer_test.c
+ags_check_system_functional_ffplayer_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS) $(FONTCONFIG_CFLAGS) $(GDKPIXBUF_CFLAGS) $(CAIRO_CFLAGS) $(GTK_CFLAGS) $(WEBKITGTK_CFLAGS) $(POPPLER_CFLAGS) $(GTK_MAC_INTEGRATION_CFLAGS) $(W32API_CFLAGS)
+ags_check_system_functional_ffplayer_test_CPPFLAGS = -DAGS_SRC_DIR=\"$(srcdir)\" $(AGS_RESOURCES) $(AGS_FEATURES)
+ags_check_system_functional_ffplayer_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_functional_ffplayer_test_LDADD = $(gsequencer_check_system_functional_test_LDADD)
+
 ags-parallel-check-system-valgrind-functional-test: $(installcheck_programs)
 	xvfb-run --server-args="-screen 0 1920x1080x24" -a libtool --mode=execute valgrind -v ./ags_check_system_functional_server_test
 	xvfb-run --server-args="-screen 0 1920x1080x24" -a libtool --mode=execute valgrind -v ./ags_check_system_functional_osc_server_test
@@ -217,8 +225,8 @@ ags-check-system-functional-test: $(installcheck_programs)
 	./ags_check_system_functional_matrix_test
 	./ags_check_system_functional_synth_test
 	./ags_check_system_functional_hybrid_synth_test
+	./ags_check_system_functional_ffplayer_test
 
-#./ags_check_system_functional_ffplayer_test
 #./ags_check_system_functional_notation_edit_test
 #./ags_check_system_functional_audio_config_test
 #./ags_check_system_functional_loop_000_xml_test
