@@ -9,6 +9,7 @@ ags (4.3.0)
 	* refactored ags_functional_matrix_test.c
 	* refactored ags_functional_synth_test.c
 	* refactored ags_functional_hybrid_synth_test.c
+	* refactored ags_functional_ffplayer_test.c
 
 ags (4.2.14)
 
